--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -3,6 +3,7 @@
   "common.success": "Success",
   "common.ok": "OK",
   "common.cancel": "Cancel",
+  "common.current": "Current",
   "common.confirm": "Confirm",
   "common.delete": "Delete",
   "common.edit": "Edit",
@@ -285,6 +286,7 @@
   "admin.orders.payment": "Payment Details",
   "admin.orders.shippingInfo": "Shipping Information",
   "admin.orders.shippedDate": "Shipped Date",
+  "admin.orders.manage.noLabel": "No label created yet",
   "admin.orders.manage.title": "Manage Order",
   "admin.orders.manage.updateStatus": "Update Status",
   "admin.orders.manage.updateStatusButton": "Update Status",
