--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -3,6 +3,7 @@
   "common.success": "Başarılı",
   "common.ok": "Tamam",
   "common.cancel": "İptal",
+  "common.current": "Mevcut",
   "common.confirm": "Onayla",
   "common.delete": "Sil",
   "common.edit": "Düzenle",
@@ -351,6 +352,7 @@
   "admin.stock": "Stok",
   "admin.orders.shippingInfo": "Kargo Bilgileri",
   "admin.orders.shippedDate": "Gönderim Tarihi",
+  "admin.orders.manage.noLabel": "Henüz etiket oluşturulmadı",
   "admin.orders.manage.title": "Siparişi Yönet",
   "admin.orders.manage.updateStatus": "Durumu Güncelle",
   "admin.orders.manage.updateStatusButton": "Durumu Güncelle",
