feat: Introduce `isSuperAdmin` role, enable user deletion with password confirmation, and add email notifications for admin-initiated user updates.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -355,5 +355,27 @@
   "admin.orders.shippingInfo": "Versandinformationen",
   "admin.orders.shippedDate": "Versanddatum",
   "admin.orders.manage.noLabel": "Noch kein Etikett erstellt",
-  "admin.orders.payment": "Zahlungsinformationen"
+  "admin.orders.payment": "Zahlungsinformationen",
+  "admin.users.editTitle": "Benutzer bearbeiten",
+  "admin.users.fullName": "Vollständiger Name",
+  "admin.users.email": "E-Mail-Adresse",
+  "admin.users.status": "Kontostatus",
+  "admin.users.adminAccess": "Admin-Zugriff",
+  "admin.users.grantAdmin": "Administratorrechte gewähren",
+  "admin.users.saveChanges": "Änderungen speichern",
+  "admin.users.deleteUser": "Benutzer löschen",
+  "admin.users.updateSuccess": "Benutzer aktualisiert",
+  "admin.users.updateSuccessMessage": "Das Benutzerkonto wurde erfolgreich aktualisiert.",
+  "admin.users.deleteTitle": "Benutzer löschen",
+  "admin.users.deleteConfirmTitle": "Löschung bestätigen",
+  "admin.users.deleteConfirmMessage": "Bitte geben Sie Ihr Passwort ein, um die Löschung des Benutzers zu bestätigen. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "admin.users.deleteSuccess": "Benutzer erfolgreich gelöscht",
+  "admin.users.statusTypes.active": "Aktiv",
+  "admin.users.statusTypes.passive": "Passiv",
+  "admin.users.statusTypes.cancellation_request": "Stornierungsanfrage",
+  "admin.users.statusTypes.cancelled": "Storniert",
+  "admin.users.statusTypes.deleted": "Gelöscht",
+  "admin.users.errors.updateFailed": "Benutzer konnte nicht aktualisiert werden",
+  "admin.users.errors.deleteFailed": "Benutzer konnte nicht gelöscht werden",
+  "admin.users.errors.requiredFields": "Vollständiger Name und E-Mail sind erforderlich"
 }
