--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -303,5 +303,27 @@
   "admin.orders.manage.updateSuccess": "Order updated successfully",
   "admin.orders.manage.updateError": "Failed to update order",
   "admin.orders.manage.trackingRequired": "Please enter a tracking number",
-  "admin.orders.manage.notFound": "Order not found"
+  "admin.orders.manage.notFound": "Order not found",
+  "admin.users.editTitle": "Edit User",
+  "admin.users.fullName": "Full Name",
+  "admin.users.email": "Email Address",
+  "admin.users.status": "Account Status",
+  "admin.users.adminAccess": "Admin Access",
+  "admin.users.grantAdmin": "Grant administrator privileges",
+  "admin.users.saveChanges": "Save Changes",
+  "admin.users.deleteUser": "Delete User",
+  "admin.users.updateSuccess": "User Updated",
+  "admin.users.updateSuccessMessage": "The user account has been successfully updated.",
+  "admin.users.deleteTitle": "Delete User",
+  "admin.users.deleteConfirmTitle": "Confirm Deletion",
+  "admin.users.deleteConfirmMessage": "Please enter your password to confirm user deletion. This action cannot be undone.",
+  "admin.users.deleteSuccess": "User deleted successfully",
+  "admin.users.statusTypes.active": "Active",
+  "admin.users.statusTypes.passive": "Passive",
+  "admin.users.statusTypes.cancellation_request": "Cancellation Request",
+  "admin.users.statusTypes.cancelled": "Cancelled",
+  "admin.users.statusTypes.deleted": "Deleted",
+  "admin.users.errors.updateFailed": "Failed to update user",
+  "admin.users.errors.deleteFailed": "Failed to delete user",
+  "admin.users.errors.requiredFields": "Full Name and Email are required"
 }
