--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -369,5 +369,27 @@
   "admin.orders.manage.updateSuccess": "Sipariş başarıyla güncellendi",
   "admin.orders.manage.updateError": "Sipariş güncellenemedi",
   "admin.orders.manage.trackingRequired": "Lütfen takip numarası girin",
-  "admin.orders.manage.notFound": "Sipariş bulunamadı"
+  "admin.orders.manage.notFound": "Sipariş bulunamadı",
+  "admin.users.editTitle": "Kullanıcıyı Düzenle",
+  "admin.users.fullName": "Ad Soyad",
+  "admin.users.email": "E-posta Adresi",
+  "admin.users.status": "Hesap Durumu",
+  "admin.users.adminAccess": "Yönetici Erişimi",
+  "admin.users.grantAdmin": "Yönetici ayrıcalıkları ver",
+  "admin.users.saveChanges": "Değişiklikleri Kaydet",
+  "admin.users.deleteUser": "Kullanıcıyı Sil",
+  "admin.users.updateSuccess": "Kullanıcı Güncellendi",
+  "admin.users.updateSuccessMessage": "Kullanıcı hesabı başarıyla güncellendi.",
+  "admin.users.deleteTitle": "Kullanıcıyı Sil",
+  "admin.users.deleteConfirmTitle": "Silme İşlemini Onayla",
+  "admin.users.deleteConfirmMessage": "Kullanıcı silme işlemini onaylamak için lütfen şifrenizi girin. Bu işlem geri alınamaz.",
+  "admin.users.deleteSuccess": "Kullanıcı başarıyla silindi",
+  "admin.users.statusTypes.active": "Aktif",
+  "admin.users.statusTypes.passive": "Pasif",
+  "admin.users.statusTypes.cancellation_request": "İptal Talebi",
+  "admin.users.statusTypes.cancelled": "İptal Edildi",
+  "admin.users.statusTypes.deleted": "Silindi",
+  "admin.users.errors.updateFailed": "Kullanıcı güncellenemedi",
+  "admin.users.errors.deleteFailed": "Kullanıcı silinemedi",
+  "admin.users.errors.requiredFields": "Ad Soyad ve E-posta zorunludur"
 }
