coupon ve discount feature added

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -88,6 +88,11 @@
   "cart.freeShipping.unlocked": "Sie haben kostenlosen Versand freigeschaltet!",
   "cart.shipping": "Versand",
   "cart.shipping.free": "GRATIS",
+  "cart.coupon.title": "Gutscheincode",
+  "cart.coupon.placeholder": "Code eingeben",
+  "cart.coupon.apply": "Anwenden",
+  "cart.coupon.remove": "Entfernen",
+  "cart.coupon.discount": "Rabatt",
   "cart.subtotal": "Zwischensumme",
   "cart.total": "Gesamt",
   "cart.checkout": "Zur Kasse gehen",
@@ -379,5 +384,19 @@
   "admin.users.statusTypes.deleted": "Gelöscht",
   "admin.users.errors.updateFailed": "Benutzer konnte nicht aktualisiert werden",
   "admin.users.errors.deleteFailed": "Benutzer konnte nicht gelöscht werden",
-  "admin.users.errors.requiredFields": "Vollständiger Name und E-Mail sind erforderlich"
+  "admin.users.errors.requiredFields": "Vollständiger Name und E-Mail sind erforderlich",
+  "admin.coupons.title": "Gutscheine",
+  "admin.coupons.manage": "Gutscheine verw.",
+  "admin.coupons.create": "Gutschein erstellen",
+  "admin.coupons.code": "Gutscheincode",
+  "admin.coupons.discountType": "Rabattart",
+  "admin.coupons.discountValue": "Wert",
+  "admin.coupons.minPurchase": "Mindestbestellwert",
+  "admin.coupons.usageLimit": "Nutzungslimit",
+  "admin.coupons.expiryDate": "Ablaufdatum",
+  "admin.coupons.active": "Aktiv",
+  "admin.coupons.inactive": "Inaktiv",
+  "admin.coupons.percentage": "Prozent",
+  "admin.coupons.fixed": "Fester Betrag",
+  "admin.coupons.save": "Gutschein speichern"
 }
