--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -57,6 +57,11 @@
   "cart.freeShipping.unlocked": "You've unlocked free shipping!",
   "cart.shipping": "Shipping",
   "cart.shipping.free": "FREE",
+  "cart.coupon.title": "Promo Code",
+  "cart.coupon.placeholder": "Enter code",
+  "cart.coupon.apply": "Apply",
+  "cart.coupon.remove": "Remove",
+  "cart.coupon.discount": "Discount",
   "cart.checkout.processing": "Process started...",
   "profile.notifications.sub": "0 new",
   "profile.myProfile": "Profile",
@@ -327,5 +332,19 @@
   "admin.users.statusTypes.deleted": "Deleted",
   "admin.users.errors.updateFailed": "Failed to update user",
   "admin.users.errors.deleteFailed": "Failed to delete user",
-  "admin.users.errors.requiredFields": "Full Name and Email are required"
+  "admin.users.errors.requiredFields": "Full Name and Email are required",
+  "admin.coupons.title": "Coupons",
+  "admin.coupons.manage": "Manage Coupons",
+  "admin.coupons.create": "Create Coupon",
+  "admin.coupons.code": "Coupon Code",
+  "admin.coupons.discountType": "Discount Type",
+  "admin.coupons.discountValue": "Value",
+  "admin.coupons.minPurchase": "Min Purchase",
+  "admin.coupons.usageLimit": "Usage Limit",
+  "admin.coupons.expiryDate": "Expiry Date",
+  "admin.coupons.active": "Active",
+  "admin.coupons.inactive": "Inactive",
+  "admin.coupons.percentage": "Percentage",
+  "admin.coupons.fixed": "Fixed Amount",
+  "admin.coupons.save": "Save Coupon"
 }
