--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -118,6 +118,11 @@
   "cart.freeShipping.unlocked": "Ücretsiz kargo hakkı kazandınız!",
   "cart.shipping": "Kargo",
   "cart.shipping.free": "ÜCRETSİZ",
+  "cart.coupon.title": "Promosyon Kodu",
+  "cart.coupon.placeholder": "Kodu giriniz",
+  "cart.coupon.apply": "Uygula",
+  "cart.coupon.remove": "Kaldır",
+  "cart.coupon.discount": "İndirim",
   "cart.checkout.processing": "Ödeme işlemi başlatılıyor...",
   "profile.notifications.sub": "0 yeni",
   "profile.myProfile": "Profil",
@@ -393,5 +398,19 @@
   "admin.users.statusTypes.deleted": "Silindi",
   "admin.users.errors.updateFailed": "Kullanıcı güncellenemedi",
   "admin.users.errors.deleteFailed": "Kullanıcı silinemedi",
-  "admin.users.errors.requiredFields": "Ad Soyad ve E-posta zorunludur"
+  "admin.users.errors.requiredFields": "Ad Soyad ve E-posta zorunludur",
+  "admin.coupons.title": "Kuponlar",
+  "admin.coupons.manage": "Kuponları Yönet",
+  "admin.coupons.create": "Kupon Oluştur",
+  "admin.coupons.code": "Kupon Kodu",
+  "admin.coupons.discountType": "İndirim Tipi",
+  "admin.coupons.discountValue": "Değer",
+  "admin.coupons.minPurchase": "Min. Sepet Tutarı",
+  "admin.coupons.usageLimit": "Kullanım Limiti",
+  "admin.coupons.expiryDate": "Son Tarih",
+  "admin.coupons.active": "Aktif",
+  "admin.coupons.inactive": "Pasif",
+  "admin.coupons.percentage": "Yüzde",
+  "admin.coupons.fixed": "Sabit Tutar",
+  "admin.coupons.save": "Kuponu Kaydet"
 }
