--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -301,6 +301,9 @@
   "home.search.placeholder": "Nach Premium-Produkten suchen...",
   "home.section.newArrivals": "Neuheiten",
   "home.viewAll": "Alle anzeigen",
+  "notifications.empty": "Noch keine Benachrichtigungen. Wir geben Ihnen Bescheid, wenn es etwas Neues gibt!",
+  "notifications.markAllRead": "Alle als gelesen markieren",
+  "notifications.title": "Benachrichtigungen",
   "orders.details.items": "Bestellte Artikel",
   "orders.details.payment": "Zahlungsmethode",
   "orders.details.shipping": "Versandinformationen",
