--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -301,6 +301,9 @@
   "home.search.placeholder": "Search for premium products...",
   "home.section.newArrivals": "New Arrivals",
   "home.viewAll": "View All",
+  "notifications.empty": "No notifications yet. We'll let you know when there's something new!",
+  "notifications.markAllRead": "Mark all as read",
+  "notifications.title": "Notifications",
   "orders.details.items": "Items Ordered",
   "orders.details.payment": "Payment Method",
   "orders.details.shipping": "Shipping Information",
