--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -301,6 +301,9 @@
   "home.search.placeholder": "Ürün ara...",
   "home.section.newArrivals": "Yeni Gelenler",
   "home.viewAll": "Hepsini Gör",
+  "notifications.empty": "Henüz bildirim yok. Yeni bir gelişme olduğunda sizi haberdar edeceğiz!",
+  "notifications.markAllRead": "Tümünü okundu işaretle",
+  "notifications.title": "Bildirimler",
   "orders.details.items": "Sipariş Edilen Ürünler",
   "orders.details.payment": "Ödeme Yöntemi",
   "orders.details.shipping": "Teslimat Bilgileri",
